# capstone-project

GYROstream-analytics-database-manager/: .gitignore  DATABASE_HANDLER  pyproject.toml  requirements.txt
GYROstream-analytics-database-manager/analytics_database_scheduler/: database.py  main.py  models.py  utility.py
GYROstream-analytics-database-manager/analytics_database_scheduler/API/: __init__.py  reporter.py  spotify.py
GYROstream-analytics-database-manager/tests/: test_analytics_database_scheduler.py
GYROstream-analytics-frontend/: package-lock.json  package.json
GYROstream-analytics-frontend/public/: index.html  index.html.bak  manifest.json
GYROstream-analytics-frontend/src/: API.js  App.js  Dashboard.css  Dashboard.js
GYROstream-analytics-frontend/src/components/: Chart.js  DataTable.js  Demographics.js  StatsCard.js  Title.js
GYROstream-analytics-frontend/src/views/: Itunes.js  Spotify.js
