[tool.poetry]
name = "analytics_database_scheduler"
version = "0.1.0"
description = ""
authors = ["Harry Newton <hazzaprime@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.3"
requests = "^2.23.0"
sqlalchemy = "^1.3.16"
sqlalchemy-utils = "^0.36.3"
mysqlclient = "^1.4.6"
modin = "^0.7.3"
dask = "^2.16.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
